# compaction

./: .env.example  .gitignore  README.md  pyproject.toml  run_browsecomp_langchain.py
data/: sample_browsecomp.jsonl
scripts/: prepare_browsecomp_dataset.py  prepare_musique_dataset.py  run_all_strategies.sh
src/browsecomp_benchmark/: __init__.py  agent.py  compaction.py  dataset.py  metrics.py
